remove select for mode
WEP only supports 802.11g

--- a/ui/_attachments/templates/wifi.html
+++ b/ui/_attachments/templates/wifi.html
@@ -37,11 +37,7 @@
         <tr>
             <td>Mode</td>
             <td><%- mode %></td>
-            <td><select name="mode" id="mode_select">
-                <option value="blank">Please Select</option>
-                <option value="g">G</option>
-                <option value="n">N</option>
-            </select></td>
+            <td>This cannot be changed</td>
         </tr>
         <tr>
             <td>Channel</td>
