--- a/ui/_attachments/templates/login.html
+++ b/ui/_attachments/templates/login.html
@@ -1,4 +1,4 @@
-<form action="#/login" class="form-signin form-horizontal" role="form" id="form-signin">
+<form action="" class="form-signin form-horizontal" role="form" id="form-signin">
     <div class="form-group">
         <div class="col-md-6 col-md-offset-3">
             <h2 class="form-signin-heading">Please Sign In</h2>
