--- a/ui/_attachments/templates/login.html
+++ b/ui/_attachments/templates/login.html
@@ -6,7 +6,7 @@
             <input type="text" name="inputName" id="inputName" class="form-control" placeholder="Name" required autocapitalize="off" autocorrect="off">
             <label for="inputPassword" class="sr-only">Password</label>
             <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-            <button class="btn btn-lg btn-primary btn-block" type="button" id="signin-button">Sign In</button>
+            <button class="btn btn-lg btn-primary btn-block" type="submit" id="signin-button">Sign In</button>
         </div>
     </div>
 </form>
