--- a/ui/_attachments/templates/home_devices.html
+++ b/ui/_attachments/templates/home_devices.html
@@ -1,4 +1,4 @@
-<p>The following devices are currently connected to your network using WiFi</p>
+<p>The following devices are currently connected to your network</p>
 <table class="table table-bordered table-striped">
     <thead>
         <th>Device Name</th>
