--- a/ui/_attachments/templates/history_item.html
+++ b/ui/_attachments/templates/history_item.html
@@ -7,7 +7,7 @@
         Modified by <%-user%>
     </p>
     <p>
-        At <%-timestamp%>
+        At <%= new Date(timestamp) %>
     </p>
     <button class="undo-button btn btn-primary" type="button">Undo</button>
 </div>
