--- a/ui/_attachments/templates/wifi.html
+++ b/ui/_attachments/templates/wifi.html
@@ -28,7 +28,11 @@
         <tr>
             <td>Mode</td>
             <td><%- mode %></td>
-            <td>This cannot be changed</td>
+            <td><select name="mode" id="mode_select">
+                <option value="blank">Please Select</option>
+                <option value="n">N</option>
+                <option value="g">G</option>
+            </select></td>
         </tr>
         <tr>
             <td>Channel</td>
