--- a/ui/_attachments/templates/device_deny.html
+++ b/ui/_attachments/templates/device_deny.html
@@ -52,6 +52,6 @@
     </div>
     <div class="edit-controls">
         <button class="btn btn-primary save-button" type="button">Save</button>
-        <button class="btn btn-default cancel-button" type="button">Cancel</button>
+        <button class="btn cancel-button" type="button">Cancel</button>
     </div>
 </td>
