--- a/ui/_attachments/templates/notification_item.html
+++ b/ui/_attachments/templates/notification_item.html
@@ -11,6 +11,6 @@
     </div>
 </td>
 <td>
-    <button class="btn btn-info edit-notification-button" type="button">Edit</button>
+    <button class="btn edit-notification-button" type="button">Edit</button>
     <button class="btn btn-danger delete-notification-button" type="button">Delete</button>
 </td>
