--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,18 +1,9 @@
-<div id="carousel-history" class="carousel slide" data-interval="false" data-wrap="false">
-    <ol class="carousel-indicators">
-    </ol>
-    <div class="carousel-inner" role="listbox"></div>
-    <a class="left carousel-control" href="#carousel-history" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-history" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-    </a>
-</div>
 <div class="jump_date">
     <h3>Revert to previous date</h3>
     <input type="text" name="history_dp" id="history_dp" data-provide="datepicker">
     <button type="button" class="btn btn-primary revert-button">Revert</button>
+</div>
+
+<div id="history" class="timeline">
+    <dl></dl>
 </div>
