--- a/ui/_attachments/templates/history_item.html
+++ b/ui/_attachments/templates/history_item.html
@@ -1,10 +1,11 @@
-<div class="carousel-caption">
-    <h3><%-title%></h3>
-    <p>
-        <%-description%>
-    </p>
-    <p>
-        At <%= new Date(timestamp) %>
-    </p>
-    <button class="undo-button btn btn-primary" type="button">Undo</button>
-</div>
+<dt>Apr 2014</dt>
+<dd class="pos-right clearfix">
+    <div class="circ"></div>
+    <div class="time"><%- timestamp %></div>
+    <div class="events">
+        <div class="events-body">
+            <h4 class="events-heading"><%- title %></h4>
+            <p><%-description %></p>
+        </div>
+    </div>
+</dd>
