--- a/ui/_attachments/templates/history_item.html
+++ b/ui/_attachments/templates/history_item.html
@@ -1,5 +1,5 @@
 <div class="circ"></div>
-<div class="time"><%- month %> <%- day %></div>
+<div class="time"><%- month %> <%- day %> <%- hour %>:<%- minute %>:<%- second %></div>
 <div class="events">
     <div class="events-body">
         <h4 class="events-heading"><%- title %></h4>
