--- a/ui/_attachments/templates/notification_collection.html
+++ b/ui/_attachments/templates/notification_collection.html
@@ -31,15 +31,4 @@
 
 <h2>Main user</h2>
 <p>Enter a main user and service to receive network alerts.</p>
-<form id="set-main-user" action="">
-    <label for="main-name">main-name</label>
-    <input type="text" name="main-name" id="main-name" placeholder="Name" />
-    <label for="main-service" class="sr-only">Service</label>
-    <select name="main-service" id="main-service">
-        <option value="email">Email</option>
-        <option value="growl">Growl</option>
-        <option value="phone">Text Message</option>
-        <option value="twitter">Twitter</option>
-    </select>
-    <button type="button" class="btn btn-primary" id="set-main-user-button">Set</button>
-</form>
+<div id="main-user-div"></div>
