--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -4,6 +4,6 @@
     <button type="button" class="btn btn-primary revert-button">Revert</button>
 </div>
 
-<div id="history" class="timeline">
+<div class="history_view" class="timeline">
     <dl></dl>
 </div>
