--- a/ui/_attachments/style/style.css
+++ b/ui/_attachments/style/style.css
@@ -1,7 +1,6 @@
 @CHARSET "UTF-8";
 html, body{
 	height: 100%;
-	background-color: #fafafa;
 }
 
 .container{
@@ -54,4 +53,16 @@ h2 {
 
 .history_view {
 	padding: 5px;
+}
+
+.timeline dl dd .events{
+	border-color: grey;
+}
+
+.timeline dl .pos-left .events::before{
+	border-color: transparent transparent transparent grey;
+}
+
+.timeline dl .pos-right .events::before{
+	border-color: transparent transparent transparent grey;
 }
