--- a/ui/_attachments/templates/main_user.html
+++ b/ui/_attachments/templates/main_user.html
@@ -1,3 +1,17 @@
+<table class="table table-bordered table-striped">
+ <thead>
+  <tr>
+   <th>Name</th>
+   <th>Service</th>
+  </tr>
+ </thead>
+ <tbody>
+     <tr>
+      <td><%- name %></td>
+      <td><%- service %></td>
+     </tr>
+ </tbody>
+</table>
 <form id="set-main-user" action="">
     <label for="main-name">main-name</label>
     <input type="text" name="main-name" id="main-name" placeholder="Name" />
