--- a/ui/_attachments/templates/main_user.html
+++ b/ui/_attachments/templates/main_user.html
@@ -13,7 +13,7 @@
  </tbody>
 </table>
 <form id="set-main-user" action="">
-    <label for="main-name">main-name</label>
+    <label for="main-name" class="sr-only">main-name</label>
     <input type="text" name="main-name" id="main-name" placeholder="Name" />
     <label for="main-service" class="sr-only">Service</label>
     <select name="main-service" id="main-service">
