remove the table

--- a/ui/_attachments/templates/main_user.html
+++ b/ui/_attachments/templates/main_user.html
@@ -1,22 +1,8 @@
-<table class="table table-bordered table-striped">
- <thead>
-  <tr>
-   <th>Name</th>
-   <th>Service</th>
-  </tr>
- </thead>
- <tbody>
-     <tr>
-      <td><%- name %></td>
-      <td><%- service %></td>
-     </tr>
- </tbody>
-</table>
 <form id="set-main-user" action="">
     <label for="main-name" class="sr-only">main-name</label>
-    <input type="text" name="main-name" id="main-name" placeholder="Name" />
+    <input type="text" name="main-name" id="main-name" placeholder="Name" value="<%-name%>"/>
     <label for="main-service" class="sr-only">Service</label>
-    <select name="main-service" id="main-service">
+    <select name="main-service" id="main-service" value="<%-service%>">
         <option value="email">Email</option>
         <option value="growl">Growl</option>
         <option value="phone">Text Message</option>
