make service auto select current one

--- a/ui/_attachments/templates/main_user.html
+++ b/ui/_attachments/templates/main_user.html
@@ -2,7 +2,7 @@
     <label for="main-name" class="sr-only">main-name</label>
     <input type="text" name="main-name" id="main-name" placeholder="Name" value="<%-name%>"/>
     <label for="main-service" class="sr-only">Service</label>
-    <select name="main-service" id="main-service" value="<%-service%>">
+    <select name="main-service" id="main-service">
         <option value="email">Email</option>
         <option value="growl">Growl</option>
         <option value="phone">Text Message</option>
