--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,6 +1,6 @@
 <div class="jump_date">
     <h3>Revert to previous date</h3>
-    <input type="text" name="history_dp" id="history_dp" data-provide="datepicker">
+    <input type="text" name="history_dp" id="history_dp">
     <button type="button" class="btn btn-primary revert-button">Revert</button>
 </div>
 
