--- a/ui/_attachments/templates/history_item.html
+++ b/ui/_attachments/templates/history_item.html
@@ -4,6 +4,6 @@
     <div class="events-body">
         <h4 class="events-heading"><%- title %></h4>
         <p><%-description %></p>
-        <button class="btn btn-primary undo-button"></button>
+        <button class="btn btn-primary undo-button">Undo</button>
     </div>
 </div>
