--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,6 +1,12 @@
 <div class="jump_date">
     <h3>Revert to previous date</h3>
-    <input type="text" name="history_dp" id="history_dp">
+    <div class="input-group date">
+        <input type="text" name="history_dp" id="history_dp" class="form-control">
+        <span class="input-group-addon">
+            <span class="glyphicon glyphicon-calendar"></span>
+        </span>
+    </div>
+    
     <button type="button" class="btn btn-primary revert-button">Revert</button>
 </div>
 
