--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,4 +1,5 @@
 <div class="jump_date">
+    <div id="picker_container"></div>
     <h3>Revert to previous date</h3>
     <div class="input-group date">
         <input type="text" name="history_dp" id="history_dp" class="form-control">
