--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,13 +1,13 @@
 <div class="jump_date">
     <h3>Revert to previous date</h3>
-    <div class="input-group date">
+    <div class="input-group date" class="col-md-10">
         <input type="text" name="history_dp" id="history_dp" class="form-control">
         <span class="input-group-addon">
             <span class="glyphicon glyphicon-calendar"></span>
         </span>
     </div>
     
-    <button type="button" class="btn btn-primary revert-button" type="button">Revert</button>
+    <button type="button" class="btn btn-primary revert-button col-md-2" type="button">Revert</button>
     <div id="picker_container"></div>
 </div>
 
