--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,6 +1,7 @@
 <div class="jump_date">
     <h3>Revert to previous date</h3>
-    <div class="input-group date" class="col-md-10">
+    <div class="form-group">
+        <div class="input-group date" class="col-md-10">
         <input type="text" name="history_dp" id="history_dp" class="form-control">
         <span class="input-group-addon">
             <span class="glyphicon glyphicon-calendar"></span>
@@ -8,6 +9,8 @@
     </div>
     
     <button type="button" class="btn btn-primary revert-button col-md-2" type="button">Revert</button>
+    </div>
+    
     <div id="picker_container"></div>
 </div>
 
