incorrect class def

--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,7 +1,7 @@
 <div class="jump_date">
     <h3>Revert to previous date</h3>
     <div class="row">
-        <div class="input-group date" class="col-md-10">
+        <div class="input-group date col-md-10">
             <input type="text" name="history_dp" id="history_dp" class="form-control">
             <span class="input-group-addon">
                 <span class="glyphicon glyphicon-calendar"></span>
