--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,14 +1,19 @@
 <div class="jump_date">
     <h3>Revert to previous date</h3>
     <div class="row">
-        <div class="input-group date col-md-10">
-            <input type="text" name="history_dp" id="history_dp" class="form-control">
-            <span class="input-group-addon">
-                <span class="glyphicon glyphicon-calendar"></span>
-            </span>
+        <div class="col-md-10">
+            <div class="input-group date">
+                <input type="text" name="history_dp" id="history_dp" class="form-control">
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+            </div>
         </div>
-        <button type="button" class="btn btn-primary revert-button col-md-2" type="button">Revert</button>
-        <div id="picker_container"></div>
+        <div class="col-md-2">
+            <button type="button" class="btn btn-primary revert-button" type="button">Revert</button>
+            <div id="picker_container"></div>
+        </div>
+        
     </div>
     
     
