--- a/ui/_attachments/templates/notification_collection.html
+++ b/ui/_attachments/templates/notification_collection.html
@@ -25,7 +25,7 @@
     </select>
     <label for="user" class="sr-only">User</label>
     <input type="text" name="user" value="" id="user"/>
-    <button class="btn btn-primary" id="add-notification-button" type="button">Add</button>
+    <button class="btn btn-primary" id="add-notification-button" type="submit">Add</button>
 </form>
 
 <h2>Main user</h2>
