main user submit

--- a/ui/_attachments/templates/main_user.html
+++ b/ui/_attachments/templates/main_user.html
@@ -1,4 +1,4 @@
-<form id="set-main-user" action="">
+<form id="set-main-user" action="#/notifications">
     <label for="main-name" class="sr-only">main-name</label>
     <input type="text" name="main-name" id="main-name" placeholder="Name" value="<%-name%>"/>
     <label for="main-service" class="sr-only">Service</label>
@@ -8,5 +8,5 @@
         <option value="phone">Text Message</option>
         <option value="twitter">Twitter</option>
     </select>
-    <button type="button" class="btn btn-primary" id="set-main-user-button">Set</button>
+    <button type="submit" class="btn btn-primary" id="set-main-user-button">Set</button>
 </form>
