--- a/ui/_attachments/templates/history_item.html
+++ b/ui/_attachments/templates/history_item.html
@@ -5,5 +5,6 @@
         <h4 class="events-heading"><%- title %></h4>
         <p><%-description %></p>
         <button class="btn btn-primary undo-button" type="button">Undo</button>
+        <button class="btn btn-info revert-button" type="button">Revert to before this happened</button>
     </div>
 </div>
