--- a/ui/_attachments/templates/history_item.html
+++ b/ui/_attachments/templates/history_item.html
@@ -4,7 +4,9 @@
     <div class="events-body">
         <h4 class="events-heading"><%- title %></h4>
         <p><%-description %></p>
-        <button class="btn btn-primary undo-button" type="button">Undo</button>
-        <button class="btn btn-info revert-button" type="button">Revert to before this happened</button>
+        <div>
+            <button class="btn btn-primary undo-button pull-left" type="button">Undo</button>
+            <button class="btn btn-info revert-button pull-right" type="button">Rollback to here</button>
+        </div>
     </div>
 </div>
