--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,5 +1,3 @@
-<div class="row">
-    <div class="history_view timeline col-md-12">
-        <dl></dl>
-    </div>
+<div class="history_view timeline">
+    <dl></dl>
 </div>
