--- a/ui/_attachments/templates/history_item.html
+++ b/ui/_attachments/templates/history_item.html
@@ -5,8 +5,8 @@
         <h4 class="events-heading"><%- title %></h4>
         <p><%-description %></p>
         <div>
-            <button class="btn btn-primary undo-button pull-left" type="button">Undo</button>
-            <button class="btn btn-info revert-button pull-right" type="button">Rollback to here</button>
+            <button class="btn btn-primary undo-button pull-left" type="button">Undo This Change</button>
+            <button class="btn btn-info revert-button pull-right" type="button">Undo This Change, and all subsequent changes</button>
         </div>
     </div>
 </div>
