--- a/ui/_attachments/templates/control_panel.html
+++ b/ui/_attachments/templates/control_panel.html
@@ -44,7 +44,7 @@
 <div class="row">
     <div class="col-md-12">
         <h2>Denied</h2>
-        <p>These devices have been blocked from accessing your network</p>
+        <p>These devices have been blocked from accessing your network, and will not be able to connect.</p>
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
