--- a/ui/_attachments/templates/device_pending.html
+++ b/ui/_attachments/templates/device_pending.html
@@ -1,6 +1,7 @@
 <td><%-mac_address%></td>
 <td><%-ip_address%></td>
 <td><%-host_name%></td>
+<td class="port"><%-port%></td>
 <td><input type="text" name="device_name_input" id="device_name_input" placeholder="Device Name"></td>
 <td><input type="text" name="device_owner_input" id="device_owner_input" placeholder="Owner"></td>
 <td><select name="device_type_select" id="device_type_select">
