--- a/ui/_attachments/templates/home_devices.html
+++ b/ui/_attachments/templates/home_devices.html
@@ -5,6 +5,7 @@
             <th>Device Name</th>
             <th>Device Owner</th>
             <th>IP Address</th>
+            <th>Port</th>
         </tr>
     </thead>
     <tbody>
