--- a/ui/_attachments/templates/control_panel.html
+++ b/ui/_attachments/templates/control_panel.html
@@ -9,6 +9,7 @@
                     <th>MAC Address</th>
                     <th>IP Address</th>
                     <th>Hostname</th>
+                    <th>Port</th>
                     <th>Device Name</th>
                     <th>Owner</th>
                     <th>Device Type</th>
@@ -33,6 +34,7 @@
                     <th>Notification Service</th>
                     <th>MAC Address</th>
                     <th>IP Address</th>
+                    <th>Port</th>
                     <th>Connected?</th>
                     <th>Actions</th>
                 </tr>
@@ -54,6 +56,7 @@
                     <th>Notification Service</th>
                     <th>MAC Address</th>
                     <th>IP Address</th>
+                    <th>Port</th>
                     <th>Connected?</th>
                     <th>Actions</th>
                 </tr>
