--- a/ui/_attachments/templates/device_permit.html
+++ b/ui/_attachments/templates/device_permit.html
@@ -43,6 +43,7 @@
 </td>
 <td><%-mac_address%></td>
 <td><%-ip_address%></td>
+<td class="port"><%-port%></td>
 <td class="is_connected">
 </td>
 <td>
