get rid of the action param

--- a/ui/_attachments/templates/wifi.html
+++ b/ui/_attachments/templates/wifi.html
@@ -1,5 +1,5 @@
 <div class="alert alert-danger"><strong>Save Error </strong></div>
-<form action="#/wifi" id="save-wifi-form">
+<form id="save-wifi-form">
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
