--- a/ui/_attachments/templates/wifi.html
+++ b/ui/_attachments/templates/wifi.html
@@ -1,4 +1,5 @@
 <div class="alert alert-danger"><strong>Save Error </strong></div>
+<div class="alert alert-success"><strong>Wi-Fi Updated Successfully</strong></div>
 <form id="save-wifi-form">
     <table class="table table-bordered table-striped">
         <thead>
