--- a/ui/_attachments/templates/control_panel.html
+++ b/ui/_attachments/templates/control_panel.html
@@ -58,6 +58,7 @@
                     <th>IP Address</th>
                     <th>Port</th>
                     <th>Connected?</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody class="deny"></tbody>
