--- a/ui/_attachments/templates/device_permit.html
+++ b/ui/_attachments/templates/device_permit.html
@@ -44,8 +44,7 @@
 <td><%-mac_address%></td>
 <td><%-ip_address%></td>
 <td class="port"><%-port%></td>
-<td class="is_connected">
-</td>
+<td class="is_connected"></td>
 <td>
     <div class="view">
         <button class="btn btn-danger deny-button" type="button">Deny</button>
