--- a/ui/_attachments/templates/wifi.html
+++ b/ui/_attachments/templates/wifi.html
@@ -13,7 +13,7 @@
             <tr>
                 <td>Network Name (SSID)</td>
                 <td><%- ssid %></td>
-                <td><input type="text" id="ssid_input" name="ssid"/></td>
+                <td><input type="text" id="ssid_input" name="ssid" data-toggle="tooltip" data-text="1-32 characters"/></td>
             </tr>
             <tr>
                 <td>Security type</td>
@@ -25,7 +25,7 @@
             <tr>
                 <td>Password</td>
                 <td><%- password %></td>
-                <td><input type="text" id="password_input" name="password"/></td>
+                <td><input type="text" id="password_input" name="password" data-toggle="tooltip" data-text="8-63 characters"/></td>
             </tr>
             <tr>
                 <td>Mode</td>
