--- a/ui/_attachments/templates/wifi.html
+++ b/ui/_attachments/templates/wifi.html
@@ -1,6 +1,6 @@
 <div class="alert alert-danger"><strong>Save Error </strong></div>
 <div class="alert alert-success"><strong>Wi-Fi Updated Successfully</strong></div>
-<form id="save-wifi-form" action="#/wifi">
+<form id="save-wifi-form" action="index.html/#/wifi">
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
