add new sections to home screen

--- a/ui/_attachments/templates/home.html
+++ b/ui/_attachments/templates/home.html
@@ -12,3 +12,21 @@
       </a>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-6">
+        <a href="index.html/#/notifications">
+            <h2>Notifications</h2>
+            <div class="home-notifications">
+                
+            </div>
+        </a>
+    </div>
+    <div class="col-md-6">
+        <a href="index.html/#/history">
+            <div class="home-history">
+                
+            </div>
+        </a>
+    </div>
+</div>
