add notifications to home

--- a/ui/_attachments/templates/home.html
+++ b/ui/_attachments/templates/home.html
@@ -17,14 +17,14 @@
     <div class="col-md-6">
         <a href="index.html/#/notifications">
             <h2>Notifications</h2>
-            <div class="home-notifications">
+            <div id="home-notifications">
                 
             </div>
         </a>
     </div>
     <div class="col-md-6">
         <a href="index.html/#/history">
-            <div class="home-history">
+            <div id="home-history">
                 
             </div>
         </a>
