--- a/ui/_attachments/templates/home.html
+++ b/ui/_attachments/templates/home.html
@@ -24,6 +24,7 @@
     </div>
     <div class="col-md-6">
         <a href="index.html/#/history">
+            <h2>History</h2>
             <div id="home-history">
                 
             </div>
