--- a/ui/_attachments/templates/home_history.html
+++ b/ui/_attachments/templates/home_history.html
@@ -1,9 +1,9 @@
-<p>The Services where notifications can be sent</p>
+<p>These are the most recent events.</p>
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Service</th>
+            <th>Event</th>
+            <th>When</th>
         </tr>
     </thead>
     <tbody>
