--- a/ui/_attachments/style/style.css
+++ b/ui/_attachments/style/style.css
@@ -19,6 +19,11 @@ h2 {
 	margin: 0 auto;
 }
 
+.device {
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
 .editing .edit-controls{
 	display: block;
 }
