--- a/ui/_attachments/templates/main.html
+++ b/ui/_attachments/templates/main.html
@@ -1,3 +1,7 @@
-<div class="row" id="main-row">
-    
-</div>
+<header id="header">
+</header>
+
+<section class="container" id="container">
+    <div class="row" id="main-row">
+    </div>
+</section>
