--- a/ui/_attachments/templates/main_user.html
+++ b/ui/_attachments/templates/main_user.html
@@ -1,12 +1,16 @@
-<form id="set-main-user" action="#/notifications">
-    <label for="main-name" class="sr-only">main-name</label>
-    <input type="text" name="main-name" id="main-name" placeholder="Name" value="<%-name%>"/>
-    <label for="main-service" class="sr-only">Service</label>
-    <select name="main-service" id="main-service">
-        <option value="email">Email</option>
-        <option value="growl">Growl</option>
-        <option value="phone">Text Message</option>
-        <option value="twitter">Twitter</option>
-    </select>
-    <button type="submit" class="btn btn-primary" id="set-main-user-button">Set</button>
-</form>
+<h2>Main user</h2>
+<p>Enter a main user and service to receive network alerts.</p>
+<div id="main-user-div">
+    <form id="set-main-user" action="#/notifications">
+        <label for="main-name" class="sr-only">main-name</label>
+        <input type="text" name="main-name" id="main-name" placeholder="Name" value="<%-name%>"/>
+        <label for="main-service" class="sr-only">Service</label>
+        <select name="main-service" id="main-service">
+            <option value="email">Email</option>
+            <option value="growl">Growl</option>
+            <option value="phone">Text Message</option>
+            <option value="twitter">Twitter</option>
+        </select>
+        <button type="submit" class="btn btn-primary" id="set-main-user-button">Set</button>
+    </form>
+</div>
