--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,3 +1,14 @@
 <div class="history_view timeline">
-    <dl></dl>
+    <div class="row">
+        <form id="revert_datepicker_form" class="form-inline" action="index.html/#/history" accept-charset="utf-8">
+            <div class="form-group">
+                <label for="datepicker">Date to revert to:</label>
+                <input type="text" name="datepicker" id="datepicker"/>
+            </div>
+            <button type="submit" class="btn btn-primary">Revert</button>
+        </form>
+    </div>
+    <div class="row">
+        <dl></dl>
+    </div>
 </div>
