--- a/ui/_attachments/templates/deny.html
+++ b/ui/_attachments/templates/deny.html
@@ -1,4 +1,4 @@
-<div class="device-inner">
+<div class="device-inner container-fluid deny">
     <div class="row">
         <div class="col-md-2">
             Device Name
