--- a/ui/_attachments/templates/main.html
+++ b/ui/_attachments/templates/main.html
@@ -1,6 +1,14 @@
 <header id="header">
 </header>
-
+<div class="alert alert-success alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong></strong>
+</div>
+<div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong>Save Error: </strong>
+        
+</div>
 <section class="container" id="container">
     <div class="row" id="main-row">
     </div>
