--- a/ui/_attachments/style/style.css
+++ b/ui/_attachments/style/style.css
@@ -25,6 +25,7 @@ h2 {
 
 .alert{
     display: none;
+    padding-top:60px;
 }
 
 #ui-datepicker-div{
@@ -37,11 +38,11 @@ h2 {
     border-radius: 5px;
 }
 
-.permit>div{
+.permit{
     border: 2px solid green;
 }
 
-.deny>div{
+.deny{
     border:2px solid red;
 }
 
