--- a/ui/_attachments/templates/control_panel.html
+++ b/ui/_attachments/templates/control_panel.html
@@ -1,3 +1,1 @@
-<div class="alert alert-danger"><strong>Save Error: </strong></div>
-<div class="row device_container">
-</div>
+<div class="row device_container"></div>
