--- a/ui/_attachments/templates/permit.html
+++ b/ui/_attachments/templates/permit.html
@@ -1,4 +1,4 @@
-<div class="device-inner container-fluid">
+<div class="device-inner container-fluid permit">
     <div class="row">
         <div class="col-md-2">
             Device Name
