--- a/ui/_attachments/style/style.css
+++ b/ui/_attachments/style/style.css
@@ -7,7 +7,7 @@ html, body{
 }
 
 h3{
-    padding-left:5px;
+    padding-left: 5px;
 }
 
 h2 {
@@ -28,10 +28,6 @@ h2 {
     padding-top:60px;
 }
 
-#ui-datepicker-div{
-    z-index: 1000 !important;
-}
-
 .device-inner{
     padding: 5px;
     border: 2px solid black;
@@ -39,15 +35,19 @@ h2 {
 }
 
 .permit{
-    border: 2px solid green;
+    border: 2px solid #a0d468;
 }
 
 .deny{
-    border:2px solid red;
+    border: 2px solid #da4453;
 }
 
 .editing .edit-controls{
 	display: block;
+}
+
+.view{
+    padding-bottom: 3px;
 }
 
 .editing .view{
@@ -64,8 +64,8 @@ h2 {
 }
 
 .item{
-	height:480px;
-	width:1200px;
+	height: 480px;
+	width: 1200px;
 	background-color:#222222;
 }
 
@@ -74,11 +74,11 @@ h2 {
 }
 
 .revert-button{
-    display:none;
+    display: none;
 }
 
 .undoable .revert-button{
-    display:block;
+    display: block;
 }
 
 .undoable .undo-button{
