--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -3,7 +3,7 @@
         <form id="revert_datepicker_form" class="form-inline" action="index.html/#/history" accept-charset="utf-8">
             <div class="form-group">
                 <label for="datepicker">Date to revert to:</label>
-                <input type="text" name="datepicker" id="datepicker"/>
+                <input type="datetime-local" name="datepicker" id="datepicker"/>
             </div>
             <button type="submit" class="btn btn-primary">Revert</button>
         </form>
