--- a/ui/_attachments/templates/permit.html
+++ b/ui/_attachments/templates/permit.html
@@ -1,71 +1,71 @@
 <div class="device-inner container-fluid permit">
     <div class="row">
         <div class="col-md-2">
-            Device Name
+            <strong>Device Name</strong>
         </div>
         <div class="col-md-2 col-md-offset-2">
             <div class="view">
                 <%-device_name%>
             </div>
-            <div class="edit-controls">
-                <input type="text" name="edit_device_name_input" id="edit_device_name_input" value="<%-device_name%>">
+            <div class="edit-controls form-inline">
+                <input type="text" name="edit_device_name_input" id="edit_device_name_input" value="<%-device_name%>" class="form-control col-md-2">
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-2">
-            Owner       
+            <strong>Owner</strong>       
         </div>
         <div class="col-md-2 col-md-offset-2">
             <div class="view">
                 <%-name%>
             </div>
-            <!--<div class="edit-controls">-->
-            <!--    <input type="text" name="edit_owner_input" id="edit_owner_input" value="<%-name%>">-->
-            <!--</div>    -->
+            <div class="edit-controls">
+                <input type="text" name="edit_owner_input" id="edit_owner_input" value="<%-name%>">
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-2">
-            Device Type
+            <strong>Device Type</strong>
         </div>
         <div class="col-md-2 col-md-offset-2">
             <div class="view">
                 <%-device_type%>
             </div>
-            <!--<div class="edit-controls">-->
-            <!--    <select name="device_type_select" id="device_type_select">-->
-            <!--        <option value="desktop">Desktop</option>-->
-            <!--        <option value="laptop">Laptop</option>-->
-            <!--        <option value="phone">Phone</option>-->
-            <!--        <option value="tablet">Tablet</option>-->
-            <!--        <option value="other">Other</option>-->
-            <!--    </select>-->
-            <!--</div>        -->
+            <div class="edit-controls">
+                <select name="device_type_select" id="device_type_select">
+                    <option value="desktop">Desktop</option>
+                    <option value="laptop">Laptop</option>
+                    <option value="phone">Phone</option>
+                    <option value="tablet">Tablet</option>
+                    <option value="other">Other</option>
+                </select>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-2">
-            Notification Service
+            <strong>Notification Service</strong>
         </div>
         <div class="col-md-2 col-md-offset-2">
             <div class="view">
                 <%-notification_service%>
             </div>
-            <!--<div class="edit-controls">-->
-            <!--    <select name="device_notification_select" id="device_notification_select">-->
-            <!--        <option value="email">Email</option>-->
-            <!--        <option value="phone">SMS</option>-->
-            <!--        <option value="growl">Growl</option>-->
-            <!--        <option value="twitter">Twitter</option>-->
-            <!--    </select>-->
-            <!--</div>-->
+            <div class="edit-controls">
+                <select name="device_notification_select" id="device_notification_select">
+                    <option value="email">Email</option>
+                    <option value="phone">SMS</option>
+                    <option value="growl">Growl</option>
+                    <option value="twitter">Twitter</option>
+                </select>
+            </div>
         </div>
     </div>
     
     <div class="row">
         <div class="col-md-2">
-            MAC Address
+            <strong>MAC Address</strong>
         </div>
         <div class="col-md-2 col-md-offset-2">
             <%-mac_address%>
@@ -74,7 +74,7 @@
     
     <div class="row">
         <div class="col-md-2">
-            IP Address
+            <strong>IP Address</strong>
         </div>
         <div class="col-md-2 col-md-offset-2">
             <%-ip_address%>
@@ -83,7 +83,7 @@
     
     <div class="row">
         <div class="col-md-2">
-            Port
+            <strong>Port</strong>
         </div>
         <div class="col-md-2 col-md-offset-2 port">
             <%-port%>
@@ -92,18 +92,28 @@
     
     <div class="row">
         <div class="col-md-2">
-            Connected?
+            <strong>Connected?</strong>
         </div>
         <div class="col-md-2 col-md-offset-2 is_connected"></div>
     </div>
-    <!--<div>-->
-    <!--    <div class="view">-->
-    <!--        <button class="btn btn-danger deny-button" type="button">Deny</button>-->
-    <!--        <button class="btn btn-default edit-button" type="button">Edit</button>-->
-    <!--    </div>-->
-    <!--    <div class="edit-controls">-->
-    <!--        <button class="btn btn-primary save-button" type="button">Save</button>-->
-    <!--        <button class="btn btn-default cancel-button" type="button">Cancel</button>-->
-    <!--    </div>-->
-    <!--</div>-->
+    
+    <div class="row">
+        <div class="col-md-2">
+            <div class="view">
+                <button class="btn btn-danger deny-button" type="button">Deny</button>    
+            </div>
+            <div class="edit-controls">
+                <button class="btn btn-primary save-button" type="button">Save</button>
+            </div>
+        </div>
+        
+        <div class="col-md-2 col-md-offset-2">
+            <div class="view">
+                <button class="btn btn-default edit-button" type="button">Edit</button>
+            </div>
+            <div class="edit-controls">
+                <button class="btn btn-default cancel-button" type="button">Cancel</button>
+            </div>
+        </div>
+    </div>
 </div>
