--- a/ui/_attachments/templates/permit.html
+++ b/ui/_attachments/templates/permit.html
@@ -7,7 +7,7 @@
             <div class="view">
                 <%-device_name%>
             </div>
-            <div class="edit-controls form-inline">
+            <div class="edit-controls">
                 <input type="text" name="edit_device_name_input" id="edit_device_name_input" value="<%-device_name%>" class="form-control col-md-2">
             </div>
         </div>
