--- a/ui/_attachments/templates/main.html
+++ b/ui/_attachments/templates/main.html
@@ -2,7 +2,7 @@
 </header>
 <div class="alert alert-success alert-dismissable">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong></strong>
+    <strong>Change Saved Successfully</strong>
 </div>
 <div class="alert alert-danger alert-dismissable">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
