--- a/ui/_attachments/templates/pending.html
+++ b/ui/_attachments/templates/pending.html
@@ -7,7 +7,7 @@
             <%-mac_address%>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col-md-2">
             <strong>IP Address</strong>
@@ -16,7 +16,7 @@
             <%-ip_address%>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col-md-2">
             <strong>Hostname</strong>
@@ -25,7 +25,7 @@
             <%-host_name%>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col-md-2">
             <strong>Port</strong>
@@ -34,7 +34,14 @@
             <%-port%>
         </div>
     </div>
-    
+
+    <div class="row">
+        <div class="col-md-2">
+            <strong>Network Access</strong>
+            <div class="col-md2 col-md-offset-2"><%-state%></div>
+        </div>
+    </div>
+
     <div class="form-horizontal">
         <div class="form-group">
             <label for="device_name_input" class="control-label col-md-2">Device Name</label>
@@ -42,14 +49,14 @@
                 <input type="text" name="device_name_input" id="device_name_input" placeholder="Device Name" class="form-control">
             </div>
         </div>
-        
+
         <div class="form-group">
             <label for="device_name_input" class="control-label col-md-2">Owner</label>
             <div class="col-md-8 col-md-offset-2">
                 <input type="text" name="device_owner_input" id="device_owner_input" placeholder="Owner" class="form-control">
             </div>
         </div>
-        
+
         <div class="form-group">
             <label for="device_type_select" class="control-label col-md-2">Device Type</label>
             <div class="col-md-8 col-md-offset-2">
@@ -70,7 +77,7 @@
                     <option value="phone">SMS</option>
                     <option value="growl">Growl</option>
                     <option value="twitter">Twitter</option>
-                </select> 
+                </select>
             </div>
         </div>
     </div>
