--- a/ui/_attachments/templates/history.html
+++ b/ui/_attachments/templates/history.html
@@ -1,13 +1,13 @@
 <div class="history_view timeline">
     <div class="row">
         <form id="revert_datepicker_form" class="form-inline col-md-9" action="index.html/#/history" accept-charset="utf-8">
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 <label for="datepicker">Date to revert to:</label>
                 <input type="datetime-local" name="datepicker" id="datepicker"/>
             </div>
-            <button type="submit" class="btn btn-primary">Revert</button>
+            <button type="submit" class="btn btn-primary col-md-3">Revert</button>
         </form>
-        <button type="button" name="restart_button" id="restart_button" class="btn btn-danger">Start Again</button>
+        <button type="button" name="restart_button" id="restart_button" class="btn btn-danger col-md-3">Start Again</button>
     </div>
     <div class="row">
         <dl></dl>
